# sample-cpp-lib-usage

./: .gitignore  README.md  meson.build
src/: main.cc
subprojects/: .gitignore  sample-cpp-lib.wrap
subprojects/sample-cmake-lib/: CMakeLists.txt
subprojects/sample-cmake-lib/include/sample-cmake-lib/: ok.h
subprojects/sample-cmake-lib/src/: ok.cc
subprojects/sample-subproject/: meson.build
subprojects/sample-subproject/include/sample-subproject/: version.h
subprojects/sample-subproject/src/: version.cc
